...
    android:background="?colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:titleTextColor="?colorPrimary"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/textToolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center_vertical"
...
